input property binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,7 @@
   <h3>Learning Binding in Angular</h3>
   <hr />
   <input class="form-control" type="text" (input)="inputHandler($event)" />
+  <hr />
+
+  <app-sample [greeting]="appGreeting"></app-sample>
 </div>
