--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -1,1 +1,5 @@
-<h3>Sample says {{ greeting }}</h3>
+<h3>Sample says {{ count }}</h3>
+
+<hr />
+
+<button class="btn btn-success" (click)="clickHandler()">Login</button>
